# arm

./: .gitignore  .gitmodules  README.md  Закупка  Пустой документ
Libopencm3_PROJECTS/rtos/G030_test/: CMakeLists.txt  main.c
Libopencm3_PROJECTS/rtos/G030_test/Release/: CMakeCache.txt  CMakeCache.txt.prev  Makefile  cmake_install.cmake
RUST_PROJECTS/F407_3/: Cargo.toml  build.sh  memory.x  write_flash.sh
RUST_PROJECTS/F407_3/src/: main.rs
STM32_Learning/56_BSP/: .cproject  .mxproject  .project  56_BSP.ioc  CMakeLists.txt
STM32_Learning/56_BSP/Core/Inc/: stm32f7xx_it.h
STM32_Learning/56_BSP/Core/Src/: main.c  stm32f7xx_hal_msp.c
STM32_Learning/56_BSP/Debug/: 56_BSP.elf  56_BSP.list  56_BSP.map  makefile  objects.list
STM32_Learning/56_BSP/Release/: 56_BSP.elf  56_BSP.list  56_BSP.map  objects.list  sources.mk
STM32_Learning/TLS_attempt_2/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  TLS_attempt2.ioc
STM32_Learning/TLS_attempt_2/Core/Inc/: FreeRTOSConfig.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h
STM32_Learning/TLS_attempt_2/Core/Src/: ltdc.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c
STM32_Learning/TLS_attempt_2/LAN8720_TCP_SERVER/: .mxproject  LAN8720_TCP_SERVER.ioc
STM32_Learning/TLS_attempt_2/LAN8720_TCP_SERVER/Inc/: lwipopts.h  net.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
STM32_Learning/TLS_attempt_2/LAN8720_TCP_SERVER/Src/: ethernetif.c  lwip.c  main.c  net.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32_Learning/TLS_attempt_2/LWIP/App/: lwip.c
STM32_Learning/TLS_attempt_2/wolfSSL/: wolfSSL.I-CUBE-wolfSSL_conf.h
STM32_Learning/TLS_attempt_2/wolfssl-examples-master/embedded/: tls-server-size.c  tls-sock-server.c
STM32_NEW_PROJECTS/STM32G030F6P6TR/: .cproject  .mxproject  CMakeLists.txt  MP2790_reg.h  STM32G030F6.jflash  STM32G030F6P6TR.ioc  STM32G030F6PX_FLASH.ld  flash_script.jlink  Порядок обмена LL
STM32_NEW_PROJECTS/STM32G030F6P6TR/.metadata/: .log4j2.xml  version.ini
STM32_NEW_PROJECTS/STM32G030F6P6TR/Core/Inc/: MP2790_reg.h  eeprom.h  i2c.h  main.h  stm32g0xx_it.h
STM32_NEW_PROJECTS/STM32G030F6P6TR/Core/Src/: MP2790.c  MP42790.c  eeprom.c  gpio.c  i2c.c  main.c  stm32g0xx_hal_msp.c  stm32g0xx_it.c  usart.c
STM32_NEW_PROJECTS/STM32G030F6P6TR/Docs/: .~lock.Карта регистров микросхемы MP2790.xlsx#  Карта регистров микросхемы MP2790.xlsx  Описание алгоритма работы микроконтроллера в ВУБ-02Е__.odt
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_BLINK01/: .mxproject  LL_BLINK01.ioc
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_BLINK01/MDK-ARM/: LL_BLINK01.uvoptx  LL_BLINK01.uvprojx  startup_stm32f103xb.lst
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_BLINK01/Src/: main.c
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_USART_TX/: LL_USART_TX.ioc
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_USART_TX/Inc/: main.h  max7219.h
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_USART_TX/MDK-ARM/: LL_USART_TX.uvoptx  LL_USART_TX.uvprojx  startup_stm32f103xb.lst
STM32_NEW_PROJECTS/STM32G030F6P6TR/LL_USART_TX/Src/: main.c  max7219.c
STM32_PROJECTS/STM32_F103C8T6_1_Blink/: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32_F103C8Y6_1_Blink.ioc  flash_script.jlink
STM32_PROJECTS/STM32_F103C8T6_1_Blink/Core/Src/: main.c  stm32f1xx_hal_msp.c
STM32_gdmx_display/: .gitignore  .mxproject  CMakeLists.txt  GV_infoboard Debug.launch  GV_infoboard.elf.launch  README.md  gdmx-display-usage-en.txt  gdmx-display.Doxyfile  tsensor.py
STM32_gdmx_display/Inc/: led.h  usb_device.h  usbd_desc.h
STM32_gdmx_display/Src/: display.c  freertos.c  hd44780.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_tim.c  stm32f1xx_it.c  system_stm32f1xx.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
STM32_gdmx_display/doc/software/docbook/: annotated.xml  buzzer_8c.xml  buzzer_8h.xml  cmsis__armclang_8h.xml  cmsis__compiler_8h.xml  cmsis_os_h.xml  core__armv8mbl_8h.xml  core__armv8mml_8h.xml  core__cm0_8h.xml  core__cm0plus_8h.xml  core__cm23_8h.xml  core__cm3_8h.xml  core__cm7_8h.xml  core__sc300_8h.xml  deprecated.xml  group___c_m_s_i_s.xml  group___c_m_s_i_s___core___function_interface.xml  group___c_m_s_i_s___core___instruction_interface.xml  group___c_m_s_i_s___core___n_v_i_c_functions.xml  group___c_m_s_i_s___core___reg_acc_functions.xml  group___c_m_s_i_s___core___s_a_u_functions.xml  group___c_m_s_i_s___d_w_t.xml  group___c_m_s_i_s___f_p_u.xml  group___c_m_s_i_s___s_c_b.xml  group___c_m_s_i_s___sys_tick.xml  group___c_m_s_i_s__core___debug_functions.xml  group___c_m_s_i_s__core__base.xml  group___c_m_s_i_s__core__bitfield.xml  group___c_o_r_t_e_x.xml  group___c_o_r_t_e_x___exported___functions___group2.xml  group___c_o_r_t_e_x___exported___types.xml  group___c_o_r_t_e_x___preemption___priority___group.xml  group___c_o_r_t_e_x___sys_tick__clock__source.xml  group___channel___c_c___state.xml  group___configuration__section__for___c_m_s_i_s.xml  group___d_b_g_m_c_u___freeze___unfreeze.xml  group___d_m_a.xml  group___d_m_a___data__transfer__direction.xml  group___d_m_a___error___code.xml  group___d_m_a___exported___constants.xml  (+502 more)
STM32_gdmx_display/doc/software/html/: _free_r_t_o_s_8h_source.html  _free_r_t_o_s_config_8h_source.html  _stack_macros_8h_source.html  annotated.html  buzzer_8c.html  buzzer_8h.html  buzzer_8h_source.html  classes.html  cmsis__armclang_8h.html  cmsis__armclang_8h_source.html  cmsis__compiler_8h.html  cmsis__compiler_8h_source.html  cmsis__gcc_8h.html  cmsis__gcc_8h_source.html  cmsis__iccarm_8h.html  cmsis__iccarm_8h_source.html  cmsis__version_8h.html  (+744 more)
gdmx-display/: .cproject  .project  CMakeLists.txt  GV_infoboard.ioc  arm-none-eabi.cmake  cpuusage.py  gdmx-display-usage-ru.txt
gdmx-display/Inc/: FreeRTOSConfig.h  buzzer.h  display.h  hd44780.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  usbd_cdc_if.h  usbd_conf.h
gdmx-display/Src/: buzzer.c  led.c
milandr_display_cmake/: .gitignore  CMakeLists.txt  Makefile
milandr_display_cmake/include/: gpio.h  main.h  usb.h
milandr_display_cmake/src/: checkLCD_BUZZER.cpp  gpio.c  logic.c  logic.cpp  main.cpp  mt20s4.c  rcc_delay.c  usb.c  usb.cpp  var.c
(+4307 files in other folders)
