[package]
name = "stm32f407"
version = "0.17.0"
edition = "2021"

# Зависимости для разработки под процессор Cortex-M3
[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-semihosting = "*"
panic-halt = "*"
nb = "0.1.2"
embedded-hal = "0.2.3"
fugit = "*"
debouncr = "*"

# Пакет для разработки под отладочные платы stm32f1
[dependencies.stm32f4xx-hal]
version = "0.17.0"
features = ["stm32f407", "rt"]

# Позволяет использовать `cargo fix`!
[[bin]]
name = "stm32f407"
test = false
bench = false

# Включение оптимизации кода
[profile.release]
codegen-units = 1 # Лучшая оптимизация
debug = true # Нормальные символы, не увеличивающие размер на Flash памяти
lto = true # Лучшая оптимизация
